Final Submission: Completed Task 3 (YOLO), Task 4 (FastAPI), and Task 5 (Dagster)

--- a/medical_warehouse/models/staging/sources.yml
+++ b/medical_warehouse/models/staging/sources.yml
@@ -8,3 +8,6 @@ sources:
     tables:
       - name: telegram_messages
         description: "Raw messages scraped from Telegram channels"
+      
+      - name: image_detections
+        description: "Objects detected in images using YOLOv8"
